# uuid-generator

./: Cargo.toml  README.md  build.sh
.github/workflows/: rust.yml
src/: main.rs
