[package]
name = "uuid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "0.8", features = ["v1", "v4"]}
getrandom = "*"
pico-args = "*"

[profile.release]
opt-level = "z"
lto = true
