[package]
name = "uuid"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "1.6.1", features = ["v1", "v4", "v7"]}
getrandom = "0.2.11"
pico-args = "0.5.0"

[profile.release]
opt-level = "z"
lto = true
